Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Write your HTML in this file -->
 
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="style.css">
 <html lang="en">
 </html>
