--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- Write your HTML in this file -->
 
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="style.css">
-<html lang="en">
-</html>
+
+<html lang="en"> </html>
