--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!-- Write your HTML in this file -->
 
 <!DOCTYPE html>
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
+</head>
 <html lang="en"> 
   <body>
   
